# bevy-spacesim

./: .gitignore  Cargo.toml  README.md
assets/: credits.tsv
assets/scenes/: solar.system.toml  solar.system.yaml
assets/shaders/: kawase.wgsl  lens_flare.wgsl
libraries/pan_orbit/: Cargo.toml
libraries/pan_orbit/src/: components.rs  events.rs  lib.rs  systems.rs
libraries/postprocessing/: Cargo.toml
libraries/postprocessing/src/: kawase.rs  lens_flares.rs  lib.rs  resample.rs  view_target.rs
libraries/postprocessing/src/shaders/: kawase.wgsl  lens_flare.wgsl  resample.wgsl
libraries/postprocessing/src/shaders/lens_flare/: main.wgsl  mixer.wgsl
libraries/root-eq/: Cargo.toml
libraries/root-eq/src/: lib.rs
libraries/solar_system/: Cargo.toml
libraries/solar_system/src/: body.rs  lib.rs  mjd.rs  orbit.rs  sun.rs
libraries/solar_system/src/scene/: asset.rs  components.rs  distance.rs  duration.rs  error.rs  manifest.rs  mod.rs  si_prefix.rs
libraries/starrynight/: Cargo.toml
libraries/starrynight/src/: errors.rs  instancing.rs  lib.rs
libraries/starrynight/src/shaders/: star.wgsl
src/: app.rs  cli.rs  main.rs  math.rs  orbit.rs  screen_space.rs  space.rs
src/solar_system/: body.rs  mod.rs  orbit.rs  sun.rs
src/solar_system/scene/: manifest.rs  mod.rs  processor.rs
src/ui/: inspector.rs  mod.rs  planets.rs
