[workspace]
members = ["libraries/*"]

[workspace.dependencies]
bevy = "0.14.2"
bevy_egui = "0.30.1"
big_space = "0.7.0"
serde = "1.0.215"

[package]
name = "bevy-spacesim"
version = "0.1.0"
edition = "2021"

[dependencies]
solar_system = { path = "libraries/solar_system" }
pan_orbit = { path = "libraries/pan_orbit" }

bevy = { version = "0.14.2", features = ["serialize"] }
bevy_egui.workspace = true
bevy-inspector-egui = "0.27.0"
big_space.workspace = true
egui = "0.29.1"
egui_plot = "0.29.0"

[features]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/file_watcher"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3