[workspace]
members = ["libraries/*"]

[workspace.dependencies]
bevy = "0.14.2"
bevy_egui = "0.30.1"
big_space = "0.7.0"
chrono = "0.4.38"
serde = "1.0.215"

[package]
name = "bevy-spacesim"
version = "0.1.0"
edition = "2021"

[dependencies]
pan_orbit = { path = "libraries/pan_orbit" }
solar_system = { path = "libraries/solar_system" }
starrynight = { path = "libraries/starrynight" }
postprocessing = { path = "libraries/postprocessing" }

bevy = { version = "0.14.2", features = ["serialize"] }
bevy_blur_regions = { version = "0.5.0", features = ["egui"] }
bevy_egui.workspace = true
bevy-inspector-egui = "0.27.0"
bevy_mod_debugdump = { version = "0.11.1", optional = true }
big_space.workspace = true
chrono.workspace = true
egui = "0.29.1"
egui_plot = "0.29.0"

[features]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/file_watcher", "bevy/embedded_watcher"]
print-render-graph = ["dep:bevy_mod_debugdump"]
profiling = ["bevy/trace_tracy", "bevy/trace_chrome"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3