[workspace]
members = ["libraries/*"]

[workspace.dependencies]
bevy = "0.15.0"
bevy_egui = "0.31.0"
big_space = { git = "https://github.com/Jondolf/big_space.git", branch = "bevy-0.15" }
chrono = "0.4.38"
serde = "1.0.215"

[package]
name = "bevy-spacesim"
version = "0.1.0"
edition = "2021"

[dependencies]
pan_orbit = { path = "libraries/pan_orbit" }
solar_system = { path = "libraries/solar_system" }
starrynight = { path = "libraries/starrynight" }
postprocessing = { path = "libraries/postprocessing" }

bevy = { workspace = true, features = ["serialize"] }
bevy_blur_regions = { git = "https://github.com/SolarLiner/bevy_blur_regions.git", branch = "feat/bevy0.15", features = ["egui"] }
bevy_egui.workspace = true
bevy-inspector-egui = "0.28.0"
bevy_mod_debugdump = { git = "https://github.com/jakobhellermann/bevy_mod_debugdump.git" }
big_space.workspace = true
chrono.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
egui = "0.29.1"
egui_plot = "0.29.0"
thiserror = "1.0.69"

[features]
dev = ["bevy/bevy_dev_tools", "bevy/file_watcher", "bevy/embedded_watcher"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3